implement Olivier's revisions

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -68,7 +68,7 @@ Despite the challenges of high-performance, diffraction-limited imaging at short
 
 The Visible Aperture-Masking Polarimetric Imager/Interferometer for Resolving Exoplanetary Signatures (VAMPIRES)\cite{norris2015} is an optical dual-beam imager for the Subaru Coronagraphic Extreme Adaptive Optics (SCExAO) instrument on the Subaru telescope. A schematic of SCExAO/VAMPIRES is shown in \autoref{fig:bench}. VAMPIRES operates between \qtyrange{600}{800}{\nano\meter} with capabilities for polarimetric imaging\cite{norris2020}, H$\alpha$ imaging\cite{uyama2020}, and focal plane wavefront sensing\cite{vievard2020,vievard2022,deo2022}. VAMPIRES also has a suite of non-redundant sparse aperture masks for sub-diffraction-limited interferometric imaging. For this work, though, we will focus on the traditional and polarimetric imaging modes.
 
-VAMPIRES currently uses two Andor electron-multiplying (EM) CCDs for low read noise with framerates from \qtyrange{1}{100}{\hertz}. While these detectors perform very well in the photon-limited regime, the strong non-linearities and compressed dynamic range from electron multiplication makes imaging bright targets ($m^I < 7$) difficult. To address this problem, we have designed and deployed a classic Lyot coronagraph (CLC), which greatly attenuates the stellar point spread function (PSF), allowing the use of high EM gain without saturation. This is the primary motivation for building a coronagraph for VAMPIRES- avoiding saturation is key for CCD imaging, but this limits the off-axis signal-to-noise ratio (S/N). By attenuating the on-axis light, the off-axis signal can be increased without saturation from the stellar PSF, ultimately improving the S/N.
+VAMPIRES currently uses two electron-multiplying (EM) CCDs (model Andor iXon 897) for low read noise with framerates from \qtyrange{1}{100}{\hertz}. While these detectors perform very well in the photon-limited regime, the strong non-linearities and compressed dynamic range from electron multiplication makes imaging bright targets ($m_I < 7$) difficult. To address this problem, we have designed and deployed a classic Lyot coronagraph (CLC), which greatly attenuates the stellar point spread function (PSF), allowing the use of high EM gain without saturation. This is the primary motivation for building a coronagraph for VAMPIRES- avoiding saturation is key for CCD imaging, but this limits the off-axis signal-to-noise ratio (S/N). By attenuating the on-axis light, the off-axis signal can be increased without saturation from the stellar PSF, ultimately improving the S/N.
 
 \begin{figure*}
    \centering
@@ -89,14 +89,14 @@ We used the open-source python package \texttt{HCIPy}\cite{por2018} for simulati
 \begin{figure*}
    \centering
    \includegraphics[width=\textwidth]{figures/aperture_psf}
-   \caption{(a) The SCExAO pupil, which is slightly undersized compared to the Subaru aperture and contains additional features. The aperture diameter is 95\% of the Subaru clear aperture; effectively \qty{7.79}{\meter}. The central obstruction is 31\% of this diameter. The two additional circles are masks for inactive deformable mirror actuators, one of which lies on a spider segment, while the other requires an additional spider. (b) The VAMPIRES PSF simulated using \texttt{HCIPy}. The four grayscale circles correspond to the focal plane mask sizes.}\label{fig:pupil}
+   \caption{(a) The SCExAO pupil, which is slightly undersized compared to the Subaru aperture and contains additional features. The aperture diameter is 95\% of the Subaru clear aperture; effectively \qty{7.79}{\meter}. The central obstruction is 31\% of this diameter. The two additional circles are masks for inactive deformable mirror actuators, one of which lies on a spider segment, while the other requires an additional spider. (b) The VAMPIRES PSF simulated using \texttt{HCIPy}. The four grayscale circles correspond to the coronagraph focal plane mask sizes.}\label{fig:pupil}
 \end{figure*}
 
-The Lyot stop was modeled using a series of circular and rectangular apodizers with 0\% transmission. The stop design follows the shape of the SCExAO pupil with an undersized diameter and oversized obstructions. The outer diameter is 90\% the clear aperture diameter, the inner obstruction is 45\% the clear aperture diameter, the secondary support struts are 200\% their original width, and the bad deformable mirror probes are 150\% oversized. The ratio of areas of the Lyot stop and the SCExAO pupil is 63.7\%, and will theoretically widen the diffraction limit by 10\%. This final wavefront was propagated to the detector focal plane, forming the post-coronagraphic point-spread function.
+The Lyot stop was modeled using a series of circular and rectangular apodizers with 0\% transmission. The stop design follows the shape of the SCExAO pupil with an undersized diameter and oversized obstructions. The outer diameter is 90\% the clear aperture diameter, the inner obstruction is 45\% the clear aperture diameter, the secondary support struts are 200\% their original width, and the bad deformable mirror actuators are 150\% oversized. The ratio of areas of the Lyot stop and the SCExAO pupil is 63.7\%, and will theoretically widen the diffraction limit by 10\%. This final wavefront was propagated to the detector focal plane, forming the post-coronagraphic point-spread function.
 
 We repeated the above process for a series of wavelengths to approximate a broadband PSF. We summed the images produced with 10 wavefronts from \qtyrange{725}{775}{\nano\meter} to mimic the ``750-50'' filter (\qty{750}{\nano\meter} central wavelength with \qty{50}{\nano\meter} uniform bandpass). We chose this filter because at these wavelengths VAMPIRES has the highest throughput and best polarimetric efficiency. As an additional step, we generated many datasets with random tip and tilt errors sampled from a bivariate Gaussian with \qty{10}{\milliarcsecond} root-mean-square (RMS) jitter to test the coronagraph's resiliency to tip-tilt jitter. SCExAO typically has a higher RMS tip-tilt error than \qty{10}{\milliarcsecond}, which is closer to the 90th-percentile of on-sky performance. However, since VAMPIRES often operates in high-framerate lucky imaging mode, the effects of tip-tilt can be partially mitigated: the apparent movement of the focal plane mask will blur the edge, degrading sensitivity close in, but the rest of the FOV will be sharpened.
 
-We evaluated the performance and quality of our simulations from the raw contrast curves of each mask \autoref{fig:sim-contrast}. These curves measure the noise in concentric annuli around the PSF. Each annulus is one full-width at half-maximum (FWHM) wide, and the noise is calculated using the biweight scale statistic, which is robust to outliers such as cosmic rays. The noise estimate also takes into account small-sample statistics\cite{mawet2014}, which bias the noise measured in annuli close to the PSF. We take the radial profile of this noise and normalize it to the non-coronagraphic PSF flux to determine the raw contrast, where we then apply a 5$\sigma$ detection threshold. For clarity, we describe all our contrast curves as ``raw'' since we never do PSF subtraction in this work. To create these contrast curves We used the open-source package \texttt{ADI.jl}\cite{lucas2020}.
+We evaluated the performance and quality of our simulations from the raw contrast curves of each mask as shown in \autoref{fig:sim-contrast}. These curves measure the noise in concentric annuli around the PSF. Each annulus is one full-width at half-maximum (FWHM) wide, and the noise is calculated using the biweight scale statistic, which is robust to outliers such as cosmic rays. The noise estimate also takes into account small-sample statistics\cite{mawet2014}, which bias the noise measured in annuli close to the PSF. We take the radial profile of this noise and normalize it to the non-coronagraphic PSF flux to determine the raw contrast, where we then apply a 5$\sigma$ detection threshold. For clarity, we describe all our contrast curves as ``raw'' since we never do PSF subtraction in this work. To create these contrast curves We used the open-source package \texttt{ADI.jl}\cite{lucas2020}.
 
 \begin{figure*}
    \centering
@@ -184,7 +184,7 @@ Lastly, we removed the focal plane mask and Lyot stop without adjusting the sour
 
 From here we created raw contrast curves the same way as in \autoref{sec:design}, calculating the 5$\sigma$ detection limits in concentric annuli one FWHM wide (accounting for small-sample statistics\cite{mawet2014}) without PSF subtraction. Because we are not performing any kind of differential imaging, the satellite spots heavily bias the contrast, so we mask them out during the noise calculations. We also calculated the background noise from our dark frames and converted it to contrast, which was $\sim$\num{3e-6} (5$\sigma$).
 
-From the raw contrast curves (\autoref{fig:contrast}), we note similar performance between all the mask sizes. At \ang{;;0.1}, the coronagraph achieves a raw contrast of $\sim$ \num{e-3}, and background-limited contrast beyond $\sim$\ang{;;1} of $\sim$\num{e-5}. Throughout the entire FOV the coronagraphs attenuate the light by \numrange{0.2}{1} orders of magnitude, although the diffraction control falls off beyond \ang{;;1}.
+From the raw contrast curves (\autoref{fig:contrast}), we note similar performance between all the mask sizes. At \ang{;;0.1}, the coronagraph achieves a raw contrast of $\sim$ \num{e-3}, and background-limited contrast beyond $\sim$\ang{;;1} of $\sim$\num{e-5}. Throughout the entire FOV, the coronagraphs attenuate the light by \numrange{0.2}{1} orders of magnitude. We expect the diffraction control relative to the unocculted PSF to be consistent throughout the FOV until the noise limit is reached, as in \autoref{fig:sim-contrast}. Here we see very little diffraction control beyond \ang{;;1}, suggesting residual wavefront errors are dominating the noise.
 
 These bench contrast curves represent an ideal observing scenario (i.e., high S/N, no seeing). The unocculted data is particularly unrealistic because we let the detector saturate to maintain the same exposure settings as the coronagraphic data. This is not typical for on-sky observations, and cannot be done at all with EM gain, sacrificing the benefits of the EM process. For high S/N observations with the coronagraph, the limiting brightness will be the satellite spots. So, for example, with \qty{50}{\nano\meter} astrogrid we improve our background-limited contrast by $10^{1.52}$ compared to the same data taken without the coronagraph with the exposure setting adjusted to avoid saturation. Without using the astrogrid, the long-exposure limit will be reached when the speckle halo saturates, which offers $\sim$\num{e2} improved contrast, which means VAMPIRES can observe targets $\sim$100 times brighter than its current limits.
 
