add cross and circle to plots

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -135,7 +135,7 @@ A common problem with coronagraphic imaging is accurately determining the flux a
 \begin{figure*}
    \centering
    \includegraphics[width=\textwidth]{figures/astrogrid_psf}
-   \caption{Coronagraphic images using the CLC-5 mask (\qty{92}{\milliarcsecond} IWA) with \qty{50}{\nano\meter} ``astrogrid'' calibration speckles. (a) A single frame of testbed data using the internal calibration source through the 750-50 filter with 110 EM gain, and \qty{20}{\milli\second} exposure length. (b) On-sky data of HIP 56083 from May 25, 2022 in poor seeing ($\sim$\ang{;;1.6}), using the 750-50 filter, 300 EM gain, and \qty{200}{\milli\second} exposure length.}\label{fig:satellite-spots}
+   \caption{Coronagraphic images using the CLC-5 mask (\qty{92}{\milliarcsecond} IWA, denoted with white circle) with \qty{50}{\nano\meter} ``astrogrid'' calibration speckles. (a) A single frame of testbed data using the internal calibration source through the 750-50 filter with 110 EM gain, and \qty{20}{\milli\second} exposure length. (b) On-sky data of HIP 56083 from May 25, 2022 in poor seeing ($\sim$\ang{;;1.6}), using the 750-50 filter, 300 EM gain, and \qty{200}{\milli\second} exposure length.}\label{fig:satellite-spots}
 \end{figure*}
 
 \subsection{Coronagraphic Characterization}
